2007-08-31 Ian Rutt
 * Thorough revamp of glint example. Simplified so that all data must be
 on the same grid now, and streamlined code.

2007-08-29 Ian Rutt
 * Changed precip anomaly coupling to be additive, but with option to use
 multiplicative version instead.

2007-08-28 Ian Rutt
 * Fixed bugs with anomaly coupling - should all be working now.

2007-08-23 Ian Rutt
 * Fixed a couple of problems with anomaly coupling

2007-08-22 Ian Rutt
 * MP-interpolation broke single-precision compilation. Fixed that...

2007-08-20 Ian Rutt
 * Fixed bug in mean-preserving interpolation.

2007-08-17 Ian Rutt
 * Added code to allow grid-box-mean-preserving interpolation on the
   sphere. This will make glint up- and downscaling
   self-consistent. Plumbed in, but not working yet.

2007-08-10 Ian Rutt
 * Added alternative temperature range calculation - fit a sine-wave
   through the data and use the amplitude. This is better because it fits
   with the assumptions made by the mass-balance schemes, and works more
   flexibly with different amounts of data. It is _not_ the default at the
   moment, but may be switched on my adding an empty section [GLINT
   sfit-arng] to the config file (either top-level glint, or
   single-instance file.
 * Added some missing implicit nones to glint.F90

2007-07-13 Ian Rutt
 * Replaced tridiagonal solver (glimmer_utils.F90) to avoid using NR code.
 * Fixed up boundary conditions in ADI scheme - explicitly set to zero
   thickness each timestep.
 * Added check to halt if ADI and periodic BCs are selected, since the
   combination is not implemented.

2007-07-12 Ian Rutt
 * More reformatting in glide_thck.F90
 * Removed redundant call to ds2y from slapsolv - this is called
   automatically within dslucs.
 * Fixed intermittent bug with non-linear solver - non-reinitialisation of
   matrix storage
 * Reformated slapsolv and improved error handling
 * Various other bits of tidying up and rationalisation

2007-07-11 Ian Rutt